Fixed text alignment in keynote speakers

--- a/src/index.css
+++ b/src/index.css
@@ -486,6 +486,10 @@ td{
 
 }
 
+.imgframe p{
+  text-align: center;
+}
+
 
 @media only screen and (max-width:1874px){
   .imgframe>div {
@@ -504,7 +508,7 @@ td{
   }
 }
 
-@media only screen and (max-width:972px){
+@media only screen and (max-width:1064px){
   .navbar1, .navfix{
     height: 80px;
   }
